kubernetes/apps/media/sonarr/app/httproute.yaml
# Internal access to Sonarr web UI
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
spec:
  hostnames:
    - "sonarr.${SECRET_DOMAIN}"
  parentRefs:
    - kind: Gateway
      name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: sonarr
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
